# trivialsec-trivialscan-monitor-queue

./: .env  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.development/: invoke-payload.json
plans/: Dev-backend.conf  Prod-backend.conf  _locals.tf  _secrets.tf  _vars.tf  iam.tf  lambda.tf  outputs.tf  queue.tf  remotes.tf
src/: app.py  internals.py  models.py  run.py
src/services/: aws.py  sendgrid.py  webhook.py
